[Start]Share_Knowledges

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -5,6 +5,7 @@ ja:
         nickname: ニックネーム
         email: メールアドレス
         password: パスワード
+        password_confirmation: パスワード(確認)
       knowledge:
         title: タイトル
         content: コンテンツ
